--- a/.github/workflows/generate-readme.yml
+++ b/.github/workflows/generate-readme.yml
@@ -1,22 +1,23 @@
 name: Generate README
+
 on:
   push:
-    branches:
-      - main
+    branches: [ main ]
+  workflow_dispatch:
+
 jobs:
-  generate:
+  build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - name: Install Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: 14
-      - name: Install dependencies
-        run: npm install
-      - name: Generate README
-        run: markdown-include README.md
-      - name: Commit changes
-        uses: stefanzweifel/git-auto-commit-action@v4
-        with:
-          commit_message: "Update README [skip ci]"
+    - name: Checkout Repository
+      uses: actions/checkout@v2
+    - name: Install Node.js and NPM
+      uses: actions/setup-node@v2.4.4
+      with:
+        node-version: '16'
+    - name: Install markdown-include
+      run: npm install markdown-include
+    - name: Generate README.md
+      run: npx markdown-include README.template.md -o README.md
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
