--- a/.github/workflows/generate-readme.yml
+++ b/.github/workflows/generate-readme.yml
@@ -1,24 +1,23 @@
-name: Update README from RawContent URL
+name: Update README
+
 on:
   push:
-    branches:
-      - main
+    branches: [main]
+
 jobs:
   update-readme:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-      - name: Install markdown-include
-        run: npm install markdown-include@latest
-      - name: Update README from markdown-include
-        run: npx markdown-include README.md
+      - name: Install Markdown-Include
+        run: npm install -g markdown-include
+      - name: Update README
+        run: markdown-include README.md --replace --stdin < <(echo '<!-- markdown-include url="https://raw.githubusercontent.com/brettjrea/Debian_Generate_Readme/main/README.md" -->')
       - name: Commit changes
         uses: EndBug/add-and-commit@v7
         with:
-          message: "Update README from markdown-include"
-          add: "README.md"
-      - name: Push changes
-        uses: ad-m/github-push-action@master
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          add: README.md
+          message: Update README
+          author_name: Your Name
+          author_email: your_email@example.com
