--- a/.github/workflows/generate-readme.yml
+++ b/.github/workflows/generate-readme.yml
@@ -13,16 +13,16 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Combine files
-        uses: andstor/file-combiner-action@v1
+        uses: technote-space/file-concat-action@v1
         with:
           files: |
-            - url: 'https://raw.githubusercontent.com/brettjrea/Debian_Generate_Readme/main/table-of-contents.md'
-            - url: 'https://raw.githubusercontent.com/brettjrea/Debian_Generate_Readme/main/configure-pm2.md'
-          separator: '\n'
+            - https://raw.githubusercontent.com/brettjrea/Debian_Generate_Readme/main/table-of-contents.md
+            - https://raw.githubusercontent.com/brettjrea/Debian_Generate_Readme/main/configure-pm2.md
+          output: combined.md
 
       - name: Create readme file
         run: |
-          echo "${{ steps.combine.outputs.combined }}" > README.md
+          mv combined.md README.md
 
       - name: Commit changes
         uses: stefanzweifel/git-auto-commit-action@v4
