--- a/.github/workflows/generate-readme.yml
+++ b/.github/workflows/generate-readme.yml
@@ -19,8 +19,7 @@ jobs:
           readme="${toc}${config}"
           echo "${readme}" > README.md
 
-      - name: Commit changes
-        run: |
-          git add README.md
-          git commit -m "Update README file"
-          git push origin main
+      - name: Auto commit
+        uses: stefanzweifel/git-auto-commit-action@v4
+        with:
+          commit_message: 'Auto'
