--- a/.github/workflows/generate-readme.yml
+++ b/.github/workflows/generate-readme.yml
@@ -19,7 +19,13 @@ jobs:
           readme="${toc}${config}"
           echo "${readme}" > README.md
 
-      - name: Auto commit
-        uses: stefanzweifel/git-auto-commit-action@v4
+      - name: Commit changes
+        uses: actions/github-script@v4
         with:
-          commit_message: 'Auto'
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          script: |
+            git config --global user.name "Your Name"
+            git config --global user.email "youremail@example.com"
+            git add README.md
+            git commit -m "Auto commit updated README.md"
+            git push origin main
