--- a/.github/workflows/generate-readme.yml
+++ b/.github/workflows/generate-readme.yml
@@ -24,7 +24,7 @@ jobs:
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
-            git config --global user.name "Your Name"
+            git config --global user.name "Your Nam"
             git config --global user.email "youremail@example.com"
             git add README.md
             git commit -m "Auto commit updated README.md"
